--- a/4k-6k.html
+++ b/4k-6k.html
@@ -42,8 +42,8 @@
             gaming
             because they need to bring the mic near to their mouth to speak which gets difficult for them to
             consentrate on a task, overall they said it has a good sound quality and worth buying.</h3>
-        <h1 id="pip">Ratings : 4.89/5.00</h1>
-        <button type="button" id="on">Buy it on amazon.</button>
+        <h1 id="pip">Ratings : 4.89/5.00</h1><a href = "https://amzn.to/3QrEYI8">
+        <button type="button" id="on">Buy it on amazon.</button></a>
         <hr>
         <h1>#2 : JBL C50HI (Wired earphones) | price : ₹ 499 </h1>
         <img src="rim.png" id="pi">
@@ -68,10 +68,10 @@
         <h3 id="hil">82% of our customers rated it as an excellent product with this cost but rest 18% had an issue of
             unclear voice from the mic and some surrouding disturbances. Overall the product was said to be an easy and
             comfortable piece with this cost</h3>
-        <h1 id="pip">Ratings : 4.40/5.00</h1>
-        <button type="button" id="on">Buy it on amazon</button>
+        <h1 id="pip">Ratings : 4.40/5.00</h1><a href = "https://amzn.to/3zH9maC">
+        <button type="button" id="on">Buy it on amazon</button></a>
         <hr>
-        <h1>#3 : boAt bassheads | price : ₹ 379 </h1>
+        <h1>#3 : boAt bassheads 100 | price : ₹ 379 </h1>
         <img src="BT.png" id="pi">
         <h2>&nbsp;&nbsp; About this earphone : </h2>
         <ul>
@@ -97,8 +97,8 @@
             moulding(By the way we don't think that its a big issue when people keep it spinning around their fingers
             the wires does not break).Overall this product is 10/10 for teens. And even its affordable just with thair
             pocket money.</h3>
-        <h1 id="pip">Ratings : 4.36/5.00</h1>
-        <button type="button" id="on">Buy it on amazon</button>
+        <h1 id="pip">Ratings : 4.36/5.00</h1><a href = "https://amzn.to/3JDkLwJ">
+        <button type="button" id="on">Buy it on amazon</button></a>
         <hr>
         <h1>#4 : Zebronics Zeb-buds 30 | price : ₹ 199</h1>
         <img src="p.png" id="pi">
@@ -122,8 +122,8 @@
         <h3 id="hil">79% of our customers appreciated the product, 21% were those who were not able to even wear these
             properly as it was slipping from their ear again and again. So first get cleared that this fits into your
             ear properly. Overall, it does what it says best match for meetings.</h3>
-        <h1 id="pip">Ratings : 4.02/5.00</h1>
-        <button type="button" id="on">Buy it on amazon.</button>
+        <h1 id="pip">Ratings : 4.02/5.00</h1><ahref = "https://amzn.to/3deeHyD">
+        <button type="button" id="on">Buy it on amazon.</button></a>
         <hr>
         <h1>#5 : boAt bassheads 152| price : ₹ 399</h1>
         <img src="bk.png" id="pi">
@@ -147,7 +147,7 @@
         <h1 id="pip">Ratings : 3.98/5.00</h1>
         <button type="button" id="on">Buy it on amazon.</button>
         <hr>
-        <h1>#6 : pTron pride lite | price : ₹ 219 </h1>
+        <h1>#6 : pTron pride lite | price : ₹ 148 </h1>
         <img src="liv.png" id="pi">
         <h2>&nbsp;&nbsp; About this earphone : </h2>
         <ul>
@@ -163,8 +163,8 @@
         <h3 id="hil">72% of the total customers liked this even the price is very low as compared to its functioning.But
             it gets damaged when its folded outside voice might be audible to you.
         </h3>
-        <h1 id="pip">Ratings : 3.50/5.00</h1>
-        <button type="button" id="on">Buy it on amazon.</button>
+        <h1 id="pip">Ratings : 3.50/5.00</h1><a href = "https://amzn.to/3p15w7n">
+        <button type="button" id="on">Buy it on amazon.</button></a>
         <hr>
         <h1>Headphones :</h1>
         <hr>
@@ -191,10 +191,10 @@
         </h2>
         <h3 id="hil">70% liked this product but the only problem was the mic for the rest of 30% but you should also
             understand that in ₹ 599 you are atleast getting a good quality headphone.</h3>
-        <h1 id="pip">Ratings : 4.11/5.00</h1>
-        <button type="button" id="on">Buy it on amazon.</button>
+        <h1 id="pip">Ratings : 4.11/5.00</h1><a href = "https://amzn.to/3P3UjOc">
+        <button type="button" id="on">Buy it on amazon.</button></a>
         <hr>
-        <h1>#2 : Bolt audio bass buds wired | ₹ 599 </h1>
+        <h1>#2 : Boult audio bass buds wired | ₹ 599 </h1>
         <img src="vix.png" id="pi">
         <h2>&nbsp;&nbsp; About this earphone : </h2>
         <ul>
@@ -214,8 +214,8 @@
         </h2>
         <h3 id="hil">70% liked this product but the only problem was the mic for the rest of 30% but you should also
             understand that in ₹ 599 you are atleast getting a good quality headphone.</h3>
-        <h1 id="pip">Ratings : 4.11/5.00</h1>
-        <button type="button" id="on">Buy it on amazon.</button>
+        <h1 id="pip">Ratings : 4.11/5.00</h1><a href = "https://amzn.to/3zZ6NlL">
+        <button type="button" id="on">Buy it on amazon.</button></a>
         <hr>
         <h1>#3 : pTron studio bluetooth headphones | ₹ 499 </h1>
         <img src="lig.png" id="pi">
@@ -238,8 +238,8 @@
         </h2>
         <h3 id="hil">68% liked this product, but it does not catch the Wi-fi too soon by the way the sound quality is
             decent and can be said as a noce on accoding to its price.</h3>
-        <h1 id="pip">Ratings : 4.01/5.00</h1>
-        <button type="button" id="on">Buy it on amazon.</button>
+        <h1 id="pip">Ratings : 4.01/5.00</h1><a href = "https://amzn.to/3PaeUQO">
+        <button type="button" id="on">Buy it on amazon.</button></a>
         <hr>
         <h1>#4 : pTron soundster arcade Wired | ₹ 499 </h1>
         <img src="ok.png" id="pi">
@@ -258,8 +258,8 @@
         <h2 id="lip">Reviews :
         </h2>
         <h3 id="hil">68% liked this product, but rest 38% did not had any explanation but just ok with this.</h3>
-        <h1 id="pip">Ratings : 3.98/5.00</h1>
-        <button type="button" id="on">Buy it on amazon.</button>
+        <h1 id="pip">Ratings : 3.98/5.00</h1><a href = "https://amzn.to/3vNHelb">
+        <button type="button" id="on">Buy it on amazon.</button></a>
         <hr>
         <h1>We had more but removed them because their rating and buyers were too less...</h1>
     </div>
