--- a/4k-6k.html
+++ b/4k-6k.html
@@ -16,7 +16,7 @@
             will suit you the best.
         </h1>
         <hr>
-        <h1>#1 : KRATOS wired earphones | price : ₹ 219</h1>
+        <h1>#1 : KRATOS Wired earphones | price : ₹ 219</h1>
         <img src="ri.png" id="pi">
         <h2>&nbsp;&nbsp; About this earphone : </h2>
         <ul>
