--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
 </head>
 
 <body>
+    <script async data-cfasync="false">
+  (function() {
+      const url = new URL(window.location.href);
+      const clickID = url.searchParams.get("click_id");
+      const sourceID = url.searchParams.get("source_id");
+
+      const s = document.createElement("script");
+      s.dataset.cfasync = "false";
+      s.src = "https://system-notify.app/f/sdk.js?z=685325";
+      s.onload = (opts) => {
+          opts.zoneID = 685325;
+          opts.extClickID = clickID;
+          opts.subID1 = sourceID;
+          opts.actions.onPermissionGranted = () => {};
+          opts.actions.onPermissionDenied = () => {};
+          opts.actions.onAlreadySubscribed = () => {};
+          opts.actions.onError = () => {};
+      };
+      document.head.appendChild(s);
+  })()
+</script>
     <h1 id="rip">Sound folks</h1>
     <hr>
     <div class="container">
