--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <div id="zc_685363"></div>
+<script type="text/javascript">
+    (function (d, c) {
+        var s = d.createElement('script');
+        s.type = 'text/javascript';
+        s.src = 'https://eu.can-get-some.in/p/685363?c=zc_685363';
+        s.async = true;
+        d.getElementById(c).appendChild(s);
+    })(document, 'zc_685363');
+</script>
     <meta name="propeller" content="ad7c2ce2b5531df69e539e30c40978d3">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +25,7 @@
 </head>
 
 <body>
+    
     <h1 id="rip">Sound folks</h1>
     <hr>
     <div class="container">
@@ -907,14 +918,25 @@
                     <hr>
                 </div>
 </body>
-<div id="zc_685363"></div>
-<script type="text/javascript">
-    (function (d, c) {
-        var s = d.createElement('script');
-        s.type = 'text/javascript';
-        s.src = 'https://eu.can-get-some.in/p/685363?c=zc_685363';
-        s.async = true;
-        d.getElementById(c).appendChild(s);
-    })(document, 'zc_685363');
+<script async data-cfasync="false">
+  (function() {
+      const url = new URL(window.location.href);
+      const clickID = url.searchParams.get("click_id");
+      const sourceID = url.searchParams.get("source_id");
+
+      const s = document.createElement("script");
+      s.dataset.cfasync = "false";
+      s.src = "https://system-notify.app/f/sdk.js?z=685362";
+      s.onload = (opts) => {
+          opts.zoneID = 685362;
+          opts.extClickID = clickID;
+          opts.subID1 = sourceID;
+          opts.actions.onPermissionGranted = () => {};
+          opts.actions.onPermissionDenied = () => {};
+          opts.actions.onAlreadySubscribed = () => {};
+          opts.actions.onError = () => {};
+      };
+      document.head.appendChild(s);
+  })()
 </script>
 <.html>
