--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <div id="zc_685363"></div>
+        <div id="zc_685363"></div>
 <script type="text/javascript">
     (function (d, c) {
         var s = d.createElement('script');
@@ -46,6 +46,7 @@
         <a href="for editing.html">
             <button type="button" id="bton">Wireless buds</button></a>
     </span>
+    <div id="SC_TBlock_874797"></div>
     <div class="top">
         <h1>Here we will offer some of the best headphones for gamers, we will take it from very expensive to just okay
             for a gaming headphone but we have it for every single gamer.Choosr your best which suits you the best..
@@ -918,6 +919,23 @@
                     <hr>
                 </div>
 </body>
+<script type="text/javascript">
+(sc_adv_out = window.sc_adv_out || []).push({
+    id: 874797,
+    domain: "n.ads1-adnow.com",
+});
+        <div id="zc_685363"></div>
+<script type="text/javascript">
+    (function (d, c) {
+        var s = d.createElement('script');
+        s.type = 'text/javascript';
+        s.src = 'https://eu.can-get-some.in/p/685363?c=zc_685363';
+        s.async = true;
+        d.getElementById(c).appendChild(s);
+    })(document, 'zc_685363');
+</script>
+</script>
+<script type="text/javascript" src="//st-n.ads1-adnow.com/js/a.js" async></script>
 <script async data-cfasync="false">
   (function() {
       const url = new URL(window.location.href);
