--- a/index.html
+++ b/index.html
@@ -918,6 +918,7 @@
                     <h1 id="pip">Ratings : 4.44/5.00</h1>
                     <hr>
                 </div>
+<script type="text/javascript"> var infolinks_pid = 3371870; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 <script type="text/javascript">
 (sc_adv_out = window.sc_adv_out || []).push({
