--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
                 this was awsome.
             </h3>
             <h1 id="pip">Ratings : 4.97/5.00</h1>
-            <hr>
+            <hr><h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a><
+<hr>
             <h1>#6 : EKSA E3000 Wired | price : ₹ 2,499</a>
             </h1>
             <img src="li.png" id="pi">
@@ -336,6 +337,8 @@
             </h3>
             <h1 id="pip">Ratings : 4.20/5.00</h1>
             <hr>
+ <h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a><
+<hr>
             <h1>#12 : Cosmic Byte GS410 | price : ₹ 625</a>
             </h1>
             <img src="whe.png" id="pi">
@@ -363,6 +366,8 @@
                     will suit you the best.
                 </h1>
                 <hr>
+                    <h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a><
+<hr>
                 <h1>#1 : KRATOS wired earphones | price : ₹ 219</h1>
                 <img src="ri.png" id="pi">
                 <h2>&nbsp;&nbsp; About this earphone : </h2>
@@ -395,6 +400,8 @@
                     consentrate on a task, overall they said it has a good sound quality and worth buying.</h3>
                 <h1 id="pip">Ratings : 4.89/5.00</h1>
                 <hr>
+                            <h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a><
+<hr>
                 <h1>#2 : JBL C50HI (Wired earphones) | price : ₹ 499 </h1>
                 <img src="rim.png" id="pi">
                 <h2>&nbsp;&nbsp; About this earphone : </h2>
@@ -530,6 +537,8 @@
                 <hr>
                 <h1>There are some of the headphones in this range which might make you a bit excited.</h1>
                 <hr>
+                                    <h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a><
+<hr>
                 <h1>#1 : Zebronics bluestooth headphones with Mic : ₹ 599</h1>
                 <img src="hed.png" id="pi">
                 <h2>&nbsp;&nbsp; About this earphone : </h2>
@@ -751,6 +760,8 @@
                     </h3>
                     <h1 id="pip">Ratings : 4.97/5.00</h1>
                     <hr>
+                    <h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a><
+<hr>
                     <h1>#6 : EKSA E3000 Wired | price : ₹ 2,499</a>
                     </h1>
                     <img src="li.png" id="pi">
