--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 this was awsome.
             </h3>
             <h1 id="pip">Ratings : 4.97/5.00</h1>
-            <hr><h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a><
+            <hr><h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a>
 <hr>
             <h1>#6 : EKSA E3000 Wired | price : ₹ 2,499</a>
             </h1>
@@ -366,7 +366,7 @@
                     will suit you the best.
                 </h1>
                 <hr>
-                    <h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a><
+                    <h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a>
 <hr>
                 <h1>#1 : KRATOS wired earphones | price : ₹ 219</h1>
                 <img src="ri.png" id="pi">
@@ -537,7 +537,7 @@
                 <hr>
                 <h1>There are some of the headphones in this range which might make you a bit excited.</h1>
                 <hr>
-                                    <h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a><
+                                    <h1>Wanna earn some profit ? move with this link -> <a href = "https://shrinke.me/RB9Vvm">Earn me money</a>
 <hr>
                 <h1>#1 : Zebronics bluestooth headphones with Mic : ₹ 599</h1>
                 <img src="hed.png" id="pi">
